# DataSpell_WS_GasolinaColombia

./: Datos_Audiencia.ipynb  Evento_Cali_Valle.ipynb  analisis_incluyendo_q1_2025.ipynb  analisys_bd_eds.ipynb  consumo_23fq_24fq_25q2.csv  consumo_q_23fq_24fq_25q2.csv  parque_automotor_cali_valle_nacional.ipynb  pyproject.toml  unique_values.json
df_q125/: column_info.csv  consumo_23_24.csv  consumo_23fq_24fq_25q1.csv  consumo_q_23_24.csv  consumo_q_23fq_24fq_25q1.csv
